# bia6304-module5

./: .gitignore  01-scrape.ipynb  02-preprocess.ipynb  03-process_one.ipynb  04-process_many.ipynb  04a-process_many-localmodel.ipynb  README.md  pyproject.toml
assets/: areas_details.ais.jsonl  areas_results.ais.jsonl  conservation_areas.tsv  random_100_areas.tsv
biagen/: io.py  llm.py  scrape.py
